[package]
name = "rainboltd"
version = "0.1.0"
authors = ["Kai Aichholz <kaiba@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
bolt = { path = "../libbolt" }
pairing = { git = "https://github.com/boltlabs-inc/pairing", branch = "master", features = ["serde"] }
serde = "1.0.102"
rand = "0.6"
secp256k1 = { version = "0.15.0", features = ["rand", "serde"] }
ff = { git = "https://github.com/boltlabs-inc/ff", branch = "master" }
