[package]
name = "rainboltd"
version = "0.1.0"
authors = ["Kai Aichholz <kaiba@alum.mit.edu>", "Julian Aichholz <julianaichholz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# warp = "0.1.20"
warp = { git = "https://github.com/seanmonstar/warp", branch = "master" }
bolt = { path = "../libbolt" }
pairing = { git = "https://github.com/boltlabs-inc/pairing", branch = "master", features = ["serde"] }
serde = "1.0.102"
serde_json = "1.0.41"
rand = "0.6"
secp256k1 = { version = "0.15.0", features = ["rand", "serde"] }
ff = { git = "https://github.com/boltlabs-inc/ff", branch = "master" }
futures = { version = "0.3.1", features = ["async-await"] }
async-trait = "0.1.19"
tokio = "0.2.0-alpha.6"
# reqwest = "0.9.22"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
http = "0.1.19"
lazy_static = "1.4.0"
base64 = "0.11.0"
# async-std = "0.99.11"
cc = "1.0.45"
near-jsonrpc-client = { git = "https://github.com/nearprotocol/nearcore" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore" }
near-crypto = { git = "https://github.com/nearprotocol/nearcore" }
near-network = { git = "https://github.com/nearprotocol/nearcore" }
borsh = "0.2.9"
actix = "0.8.2"
clap = "2.33.0"
